--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
+    "axios": "^0.24.0",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
