--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-slick": "^0.23.8",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
