--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-slick": "^0.23.8",
+    "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.4",
     "vite": "^2.7.2",
     "vite-tsconfig-paths": "^3.3.17"
   }
