--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
     "axios": "^0.24.0",
+    "currency.js": "^2.0.4",
+    "millify": "^4.0.0",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
