--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lines-ellipsis": "^0.15.0",
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
     "react-slick": "^0.28.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-lines-ellipsis": "^0.15.1",
     "@types/react-slick": "^0.23.8",
     "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-react": "^1.0.7",
