--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@mui/material": "^5.2.7",
     "axios": "^0.24.0",
     "currency.js": "^2.0.4",
+    "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "millify": "^4.0.0",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-lines-ellipsis": "^0.15.0",
     "react-query": "^3.34.7",
     "react-router-dom": "^6.2.1",
