--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
     "axios": "^0.24.0",
+    "chart.js": "^3.7.0",
     "currency.js": "^2.0.4",
+    "date-fns": "^2.28.0",
+    "html-react-parser": "^1.4.5",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "millify": "^4.0.0",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
     "react-lines-ellipsis": "^0.15.0",
