--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.7.0",
     "currency.js": "^2.0.4",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.3",
     "html-react-parser": "^1.4.5",
     "i18next": "^21.6.6",
     "i18next-browser-languagedetector": "^6.1.2",
