--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "tabWidth": 2,
-  "semi": false,
-  "jsxSingleQuote": true,
+  "printWidth": 120,
   "singleQuote": true,
   "trailingComma": "es5",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "semi": false
 }
