--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.63",
     "@mui/material": "^5.2.7",
+    "@mui/system": "^5.3.0",
     "axios": "^0.24.0",
     "chart.js": "^3.7.0",
     "currency.js": "^2.0.4",
@@ -34,15 +35,19 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.18",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@types/react-lines-ellipsis": "^0.15.1",
     "@types/react-slick": "^0.23.8",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^7.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.2",
